--- a/redirection-demo.html
+++ b/redirection-demo.html
@@ -35,8 +35,7 @@
         }
         else{
             window.setTimeout(function(){
-                // window.location = "http://hack.inti.io";
-                window.location = "http://localhost:5500/hack.html";
+                window.location = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
             }, 1000);
         }
     }, timeout);
